# rust_tcp

./: main.rs
cmd_test/: Cargo.toml
cmd_test/src/: main.rs
substrate-node-template/pallets/erc20/: Cargo.toml
substrate-node-template/pallets/erc20/src/: lib.rs
